# msg_srv_interface

ros1_msgs/: CMakeLists.txt  README.md  box_mask.msg  detection_frame.msg
